# suspension-data

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  README.rst  pyproject.toml  pytype.toml
.github/workflows/: checks.yml  pytype.yml
data_source/: university_suspension_data.csv
suspension_data/: calculation.py  constants.py  main.py  models.py  predict.py  visualize.py
suspension_data/dto/: __init__.py  suspension_dto.py
suspension_data/enums/: enums.py
suspension_data/models/: models.py  predict.py
utils/: __init__.py  auto_recognizable_str_enum.py  json_serializable.py  path.py  rand_int.py  validatable_dataclass.py
