[tool.poetry]
name = "suspension-data"
version = "0.1.0"
description = ""
authors = ["Xanonymous <trusaidlin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.11"
openai = "^0.27.7"

[tool.poetry.dev-dependencies]
pytype = "^2023.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
