[tool.poetry]
name = "suspension-data"
version = "0.1.0"
description = "The Data Science course final project, NTUT group 13, 2023"
authors = ["Xanonymous <trusaidlin@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10 <3.11"
openai = "^0.27.7"
pandas = "^2.0.2"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
pytype = "^2023.6.2"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
