[tool.poetry]
name = "suspension-data"
version = "0.1.0"
description = "The Data Science course final project, NTUT group 13, 2023"
authors = ["Xanonymous <trusaidlin@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10 <3.11"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
keras = "^2.12.0"
tensorflow = "^2.12.0"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytype = "^2023.6.2"
pylint = "^2.17.4"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
